Fix overflow in CarouselTransition

--- a/src/carousel-transition/CarouselTransition.module.css
+++ b/src/carousel-transition/CarouselTransition.module.css
@@ -1,5 +1,6 @@
 .carouselTransition {
   position: relative;
+  overflow: hidden;
 }
 
 .carouselTransition {
